<resources>
    <string name="app_name">Navigation Component</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="booking">Booking</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="more">More</string>
    <string name="loyalty">Loyalty</string>
</resources>