<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home_white_24dp"
        android:title="@string/home" />
    <item
        android:id="@+id/bookingFragment"
        android:icon="@drawable/ic_booking_white_24dp"
        android:title="@string/booking" />

    <item
        android:id="@+id/notificationFragment"
        android:icon="@drawable/ic_notifications_white_24dp"
        android:title="@string/notification" />

    <item
        android:id="@+id/loyalityFragment"
        android:icon="@drawable/ic_trip_coin_light_24dp"
        android:title="@string/loyalty" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile_light_24dp"
        android:title="@string/profile" />
</menu>